syntax = "proto3";

package careerhub.userinfo_service.restapi_grpc;
option go_package = "careerhub/userinfo_service/restapi_grpc";

import "google/protobuf/empty.proto";


service ScrapJobService {
    rpc GetScrapJobs (GetScrapJobsRequest) returns (GetScrapJobsResponse);
  rpc AddScrapJob (AddScrapJobRequest) returns (google.protobuf.Empty);
    rpc RemoveScrapJob (RemoveScrapJobRequest) returns (google.protobuf.Empty);
}

message GetScrapJobsRequest {
    string userId = 1;
}

message GetScrapJobsResponse {
    repeated ScrapJob scrapJobs = 1;
}

message ScrapJob{
    string userId = 1;
    string site = 2;
}

message AddScrapJobRequest {
    string userId = 1;
    string site = 2;
    string postingId = 3;
}

message RemoveScrapJobRequest {
    string userId = 1;
    string site = 2;
    string postingId = 3;
}